exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.cjs-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 5 issues in 3 files"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.mjs-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 5 issues in 3 files"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.jsonc-absolute-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 5 issues in 3 files"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.mjs-absolute-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 5 issues in 3 files"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config-nested-nested.json-/outer/inner/extra-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 11 issues in 3 files"
  ],
  "stderr": [
    "dir1/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir1/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir1/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config.json-/null-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 11 issues in 3 files"
  ],
  "stderr": [
    "dir1/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir1/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir1/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config.json-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 3 issues in 3 files"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config.yaml-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 3 issues in 3 files"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-options.mjs-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 3 issues in 3 files"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-option-extends (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: viewme.md",
    "Linting: 1 file",
    "Summary: 0 issues in 0 files"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-overrides-options (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: viewme.md",
    "Linting: 1 file",
    "Summary: 3 issues in 1 file"
  ],
  "stderr": [
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-relative-commonjs-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: viewme.md link.md",
    "Linting: 2 files",
    "Summary: 8 issues in 2 files"
  ],
  "stderr": [
    "link.md 3 MD039/no-space-in-links",
    "link.md 3 MD039/no-space-in-links",
    "link.md 3 MD059/descriptive-link-text",
    "viewme.md 3 any-blockquote",
    "viewme.md 3 MD009/no-trailing-spaces",
    "viewme.md 5 MD012/no-multiple-blanks",
    "viewme.md 12 MD019/no-multiple-space-atx",
    "viewme.md 14 MD047/single-trailing-newline"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > customRules-throws (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 1 file",
    "Summary: 6 issues in 1 file"
  ],
  "stderr": [
    "viewme.md:1 error throws Rule that throws during execution [This rule threw an exception: Simulated bug]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > dotfiles-exclude (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: ** !.dir !**/.info.md",
    "Linting: 7 files",
    "Summary: 28 issues in 6 files"
  ],
  "stderr": [
    ".viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    ".viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    ".viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    ".viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    ".viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir/.about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/.about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/.about.md:4 error MD032/blanks-around-lists Lists should be surrounded by blank lines [Context: \\"1. List\\"]",
    "dir/.about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/.subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/.subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/.subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/.subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/.subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:4 error MD032/blanks-around-lists Lists should be surrounded by blank lines [Context: \\"1. List\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > dotfiles-nested (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 4 files",
    "Summary: 0 issues in 0 files"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > extends (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 11 files",
    "Summary: 15 issues in 11 files"
  ],
  "stderr": [
    "file.md:1:13 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "file.md:1:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Heading!\\"]",
    "file.md:1:12 error MD026/no-trailing-punctuation Trailing punctuation in heading [Punctuation: '!']",
    "file.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"##  Heading! \\"]",
    "file.md:1:13 error MD047/single-trailing-newline Files should end with a single newline character",
    "markdownlint-cjs/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "markdownlint-cli2-cjs/file.md:1:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Heading!\\"]",
    "markdownlint-cli2-jsonc/file.md:1:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Heading!\\"]",
    "markdownlint-cli2-mjs/file.md:1:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Heading!\\"]",
    "markdownlint-cli2-yaml/file.md:1:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Heading!\\"]",
    "markdownlint-json/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "markdownlint-jsonc/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "markdownlint-mjs/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "markdownlint-yaml/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "markdownlint-yml/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > extends-markdownlint-cjs (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: file.md",
    "Linting: 1 file",
    "Summary: 3 issues in 1 file"
  ],
  "stderr": [
    "file.md:1:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Heading!\\"]",
    "file.md:1:12 error MD026/no-trailing-punctuation Trailing punctuation in heading [Punctuation: '!']",
    "file.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"##  Heading! \\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > extends-markdownlint-jsonc (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: file.md",
    "Linting: 1 file",
    "Summary: 3 issues in 1 file"
  ],
  "stderr": [
    "file.md:1:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Heading!\\"]",
    "file.md:1:12 error MD026/no-trailing-punctuation Trailing punctuation in heading [Punctuation: '!']",
    "file.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"##  Heading! \\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > fix-default-true-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 7 files",
    "Summary: 19 issues in 7 files"
  ],
  "stderr": [
    "dir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir2/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir2/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir2/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir2/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir2/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir2/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir2/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir2/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir2/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir2/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir3/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir3/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir3/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir3/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir3/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir3/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "viewme.md:5 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > fix-first-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 2 issues in 2 files"
  ],
  "stderr": [
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "viewme.md:5 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > formatter-summarize (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 14 issues in 3 files",
    "Count File",
    "    4 dir/about.md",
    "    5 dir/subdir/info.md",
    "    5 viewme.md",
    "   14 [Total]",
    "Count Rule",
    "    1 MD009/no-trailing-spaces",
    "    2 MD012/no-multiple-blanks",
    "    1 MD019/no-multiple-space-atx",
    "    2 MD021/no-multiple-space-closed-atx",
    "    1 MD022/blanks-around-headings",
    "    1 MD025/single-title/single-h1",
    "    1 MD029/ol-prefix",
    "    1 MD032/blanks-around-lists",
    "    2 MD038/no-space-in-code",
    "    1 MD041/first-line-heading/first-line-h1",
    "    1 MD047/single-trailing-newline",
    "   14 [Total]",
    "dir/about.md",
    "  Count Rule",
    "      2 MD021/no-multiple-space-closed-atx",
    "      1 MD029/ol-prefix",
    "      1 MD032/blanks-around-lists",
    "      4 [Total]",
    "dir/subdir/info.md",
    "  Count Rule",
    "      1 MD012/no-multiple-blanks",
    "      1 MD022/blanks-around-headings",
    "      2 MD038/no-space-in-code",
    "      1 MD041/first-line-heading/first-line-h1",
    "      5 [Total]",
    "viewme.md",
    "  Count Rule",
    "      1 MD009/no-trailing-spaces",
    "      1 MD012/no-multiple-blanks",
    "      1 MD019/no-multiple-space-atx",
    "      1 MD025/single-title/single-h1",
    "      1 MD047/single-trailing-newline",
    "      5 [Total]",
    "MD009/no-trailing-spaces",
    "  Count File",
    "      1 viewme.md",
    "      1 [Total]",
    "MD012/no-multiple-blanks",
    "  Count File",
    "      1 dir/subdir/info.md",
    "      1 viewme.md",
    "      2 [Total]",
    "MD019/no-multiple-space-atx",
    "  Count File",
    "      1 viewme.md",
    "      1 [Total]",
    "MD021/no-multiple-space-closed-atx",
    "  Count File",
    "      2 dir/about.md",
    "      2 [Total]",
    "MD022/blanks-around-headings",
    "  Count File",
    "      1 dir/subdir/info.md",
    "      1 [Total]",
    "MD025/single-title/single-h1",
    "  Count File",
    "      1 viewme.md",
    "      1 [Total]",
    "MD029/ol-prefix",
    "  Count File",
    "      1 dir/about.md",
    "      1 [Total]",
    "MD032/blanks-around-lists",
    "  Count File",
    "      1 dir/about.md",
    "      1 [Total]",
    "MD038/no-space-in-code",
    "  Count File",
    "      2 dir/subdir/info.md",
    "      2 [Total]",
    "MD041/first-line-heading/first-line-h1",
    "  Count File",
    "      1 dir/subdir/info.md",
    "      1 [Total]",
    "MD047/single-trailing-newline",
    "  Count File",
    "      1 viewme.md",
    "      1 [Total]"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > formatter-template (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: *.md",
    "Linting: 1 file",
    "Summary: 1 issue in 1 file"
  ],
  "stderr": [
    "\${invalid}",
    "simple.md",
    "simple.mdsimple.mdsimple.md",
    "text{text}text",
    "text{text",
    "texttext}",
    "text\${invalid}text",
    "textsimple.mdtext",
    "simple.md",
    "\${fileName}"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > frontMatter (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 0 issues in 0 files"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > gitignore-root-only (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.{md,MD}",
    "Linting: 3 files",
    "Summary: 14 issues in 3 files"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:4 error MD032/blanks-around-lists Lists should be surrounded by blank lines [Context: \\"1. List\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir/UPPER.MD:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir/UPPER.MD:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir/UPPER.MD:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir/UPPER.MD:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir/UPPER.MD:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > globs-and-ignores (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md **/*.markdown !dir/about.md",
    "Linting: 2 files",
    "Summary: 10 issues in 2 files"
  ],
  "stderr": [
    "dir/subdir/info.markdown:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.markdown:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir/info.markdown:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.markdown:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir/info.markdown:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > importModuleIds-markdownlint-cli2-jsonc (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: *.md",
    "Linting: 1 file",
    "Summary: 2 issues in 1 file"
  ],
  "stderr": [
    "file.md 1 first-line",
    "file.md 1 MD009/no-trailing-spaces"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > literal-files (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: :view(me).md :dir/view(me).md :dir(1)/viewme.md :dir(1)/(view)me.md",
    "Linting: 4 files",
    "Summary: 20 issues in 4 files"
  ],
  "stderr": [
    "dir(1)/(view)me.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir(1)/(view)me.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir(1)/(view)me.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir(1)/(view)me.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir(1)/(view)me.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir(1)/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir(1)/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir(1)/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir(1)/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir(1)/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir/view(me).md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir/view(me).md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir/view(me).md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir/view(me).md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir/view(me).md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "view(me).md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "view(me).md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "view(me).md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "view(me).md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "view(me).md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownItPlugins (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 6 files",
    "Summary: 22 issues in 6 files"
  ],
  "stderr": [
    "file/link.md:3:7 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "file/link.md:3:12 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "file/link.md:3:7 error MD059/descriptive-link-text Link text should be descriptive [Context: \\"[ link ]\\"]",
    "function/link.md:3:7 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "function/link.md:3:12 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "function/link.md:3:7 error MD059/descriptive-link-text Link text should be descriptive [Context: \\"[ link ]\\"]",
    "module/link.md:3:7 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "module/link.md:3:12 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "module/link.md:3:7 error MD059/descriptive-link-text Link text should be descriptive [Context: \\"[ link ]\\"]",
    "multiple/emoji.md:3:15 error MD044/proper-names Proper names should have the correct capitalization [Expected: SMILE; Actual: smile]",
    "multiple/emoji.md:5:13 error MD044/proper-names Proper names should have the correct capitalization [Expected: FROWNING; Actual: frowning]",
    "multiple/emoji.md:7:7 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "multiple/emoji.md:7:12 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "multiple/emoji.md:7:7 error MD059/descriptive-link-text Link text should be descriptive [Context: \\"[ link ]\\"]",
    "multiple/emoji.md:9 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "pre-imported/link.md:3:7 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "pre-imported/link.md:3:12 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "pre-imported/link.md:3:7 error MD059/descriptive-link-text Link text should be descriptive [Context: \\"[ link ]\\"]",
    "single/emoji.md:7:7 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "single/emoji.md:7:12 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "single/emoji.md:7:7 error MD059/descriptive-link-text Link text should be descriptive [Context: \\"[ link ]\\"]",
    "single/emoji.md:9 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-jsonc-mismatch (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-jsonc-null (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 1 file",
    "Summary: 5 issues in 1 file"
  ],
  "stderr": [
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-json-mismatch (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: viewme.md",
    "Linting: 1 file",
    "Summary: 0 issues in 0 files"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-yaml-invalid (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > modulePaths-non-root (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 6 files",
    "Summary: 21 issues in 6 files"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:4 error MD032/blanks-around-lists Lists should be surrounded by blank lines [Context: \\"1. List\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/hr.md:3 error sample-rule-commonjs Sample rule (commonjs) [Sample error for hr]",
    "dir/link.md:3:7 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "dir/link.md:3:12 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "dir/link.md:3:7 error MD059/descriptive-link-text Link text should be descriptive [Context: \\"[ link ]\\"]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir2/link.md:3:7 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "dir2/link.md:3:12 error MD039/no-space-in-links Spaces inside link text [Context: \\"[ link ]\\"]",
    "dir2/link.md:3:7 error MD059/descriptive-link-text Link text should be descriptive [Context: \\"[ link ]\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > no-arguments (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "https://github.com/DavidAnson/markdownlint-cli2",
    "",
    "Syntax: markdownlint-cli2 glob0 [glob1] [...] [globN] [--config file] [--configPointer pointer] [--fix] [--format] [--help] [--no-globs]",
    "",
    "Glob expressions (from the globby library):",
    "- * matches any number of characters, but not /",
    "- ? matches a single character, but not /",
    "- ** matches any number of characters, including /",
    "- {} allows for a comma-separated list of \\"or\\" expressions",
    "- ! or # at the beginning of a pattern negate the match",
    "- : at the beginning identifies a literal file path",
    "- - as a glob represents standard input (stdin)",
    "",
    "Dot-only glob:",
    "- The command \\"markdownlint-cli2 .\\" would lint every file in the current directory tree which is probably not intended",
    "- Instead, it is mapped to \\"markdownlint-cli2 *.{md,markdown}\\" which lints all Markdown files in the current directory",
    "- To lint every file in the current directory tree, the command \\"markdownlint-cli2 **\\" can be used instead",
    "",
    "Optional parameters:",
    "- --config        specifies the path to a configuration file to define the base configuration",
    "- --configPointer specifies a JSON Pointer to a configuration object within the --config file",
    "- --fix           updates files to resolve fixable issues (can be overridden in configuration)",
    "- --format        reads standard input (stdin), applies fixes, writes standard output (stdout)",
    "- --help          writes this message to the console and exits without doing anything else",
    "- --no-globs      ignores the \\"globs\\" property if present in the top-level options object",
    "",
    "Configuration via:",
    "- .markdownlint-cli2.jsonc",
    "- .markdownlint-cli2.yaml",
    "- .markdownlint-cli2.cjs or .markdownlint-cli2.mjs",
    "- .markdownlint.jsonc or .markdownlint.json",
    "- .markdownlint.yaml or .markdownlint.yml",
    "- .markdownlint.cjs or .markdownlint.mjs",
    "",
    "Cross-platform compatibility:",
    "- UNIX and Windows shells expand globs according to different rules; quoting arguments is recommended",
    "- Some Windows shells don't handle single-quoted (') arguments well; double-quote (\\") is recommended",
    "- Shells that expand globs do not support negated patterns (!node_modules); quoting is required here",
    "- Some UNIX shells parse exclamation (!) in double-quotes; hashtag (#) is recommended in these cases",
    "- The path separator is forward slash (/) on all platforms; backslash (\\\\) is automatically converted",
    "- On any platform, passing the parameter \\"--\\" causes all remaining parameters to be treated literally",
    "",
    "The most compatible syntax for cross-platform support:",
    "$ markdownlint-cli2 \\"**/*.md\\" \\"#node_modules\\""
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > no-config-unignore (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: ** !dir dir/subdir",
    "Linting: 2 files",
    "Summary: 10 issues in 2 files"
  ],
  "stderr": [
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > no-globs-and-empty-args (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "https://github.com/DavidAnson/markdownlint-cli2",
    "",
    "Syntax: markdownlint-cli2 glob0 [glob1] [...] [globN] [--config file] [--configPointer pointer] [--fix] [--format] [--help] [--no-globs]",
    "",
    "Glob expressions (from the globby library):",
    "- * matches any number of characters, but not /",
    "- ? matches a single character, but not /",
    "- ** matches any number of characters, including /",
    "- {} allows for a comma-separated list of \\"or\\" expressions",
    "- ! or # at the beginning of a pattern negate the match",
    "- : at the beginning identifies a literal file path",
    "- - as a glob represents standard input (stdin)",
    "",
    "Dot-only glob:",
    "- The command \\"markdownlint-cli2 .\\" would lint every file in the current directory tree which is probably not intended",
    "- Instead, it is mapped to \\"markdownlint-cli2 *.{md,markdown}\\" which lints all Markdown files in the current directory",
    "- To lint every file in the current directory tree, the command \\"markdownlint-cli2 **\\" can be used instead",
    "",
    "Optional parameters:",
    "- --config        specifies the path to a configuration file to define the base configuration",
    "- --configPointer specifies a JSON Pointer to a configuration object within the --config file",
    "- --fix           updates files to resolve fixable issues (can be overridden in configuration)",
    "- --format        reads standard input (stdin), applies fixes, writes standard output (stdout)",
    "- --help          writes this message to the console and exits without doing anything else",
    "- --no-globs      ignores the \\"globs\\" property if present in the top-level options object",
    "",
    "Configuration via:",
    "- .markdownlint-cli2.jsonc",
    "- .markdownlint-cli2.yaml",
    "- .markdownlint-cli2.cjs or .markdownlint-cli2.mjs",
    "- .markdownlint.jsonc or .markdownlint.json",
    "- .markdownlint.yaml or .markdownlint.yml",
    "- .markdownlint.cjs or .markdownlint.mjs",
    "",
    "Cross-platform compatibility:",
    "- UNIX and Windows shells expand globs according to different rules; quoting arguments is recommended",
    "- Some Windows shells don't handle single-quoted (') arguments well; double-quote (\\") is recommended",
    "- Shells that expand globs do not support negated patterns (!node_modules); quoting is required here",
    "- Some UNIX shells parse exclamation (!) in double-quotes; hashtag (#) is recommended in these cases",
    "- The path separator is forward slash (/) on all platforms; backslash (\\\\) is automatically converted",
    "- On any platform, passing the parameter \\"--\\" causes all remaining parameters to be treated literally",
    "",
    "The most compatible syntax for cross-platform support:",
    "$ markdownlint-cli2 \\"**/*.md\\" \\"#node_modules\\""
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > noInlineConfig (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 4 files",
    "Summary: 11 issues in 4 files"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:7:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir2/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:16:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > outputFormatters-params-absolute (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 1 file",
    "Summary: 5 issues in 1 file"
  ],
  "stderr": [],
  "formatterCodeQuality": [
    "[",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD009/no-trailing-spaces\\",",
    "    \\"description\\": \\"MD009/no-trailing-spaces: Trailing spaces [Expected: 0 or 2; Actual: 1]\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"f34a01e4a119d7df262993933665d4c97cc601702eeca2814ccad9606a3ccb48\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"viewme.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 3",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD012/no-multiple-blanks\\",",
    "    \\"description\\": \\"MD012/no-multiple-blanks: Multiple consecutive blank lines [Expected: 1; Actual: 2]\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"a3d9b647ce8d929904e64fbbb0a47223617e8985d0a4d31e674b22f919f736fb\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"viewme.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 5",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD025/single-title/single-h1\\",",
    "    \\"description\\": \\"MD025/single-title/single-h1: Multiple top-level headings in the same document\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"47cd7b74ada622add8ce464681102cb50f7fe2a685f3436327ae39c0f13ef1e6\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"viewme.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 6",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD019/no-multiple-space-atx\\",",
    "    \\"description\\": \\"MD019/no-multiple-space-atx: Multiple spaces after hash on atx style heading\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"399bbfaf6a26399d5927b93a23b6d18705bb380e90b3e3e85956de34a22c9c5b\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"viewme.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 12",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD047/single-trailing-newline\\",",
    "    \\"description\\": \\"MD047/single-trailing-newline: Files should end with a single newline character\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"bf74eade0ee3301ccaa826907651e0d6925b60d517e1110c29b081c7b6ce1acf\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"viewme.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 14",
    "      }",
    "    }",
    "  }",
    "]"
  ],
  "formatterJson": [
    "[",
    " {",
    "  \\"fileName\\": \\"viewme.md\\",",
    "  \\"lineNumber\\": 3,",
    "  \\"ruleNames\\": [",
    "   \\"MD009\\",",
    "   \\"no-trailing-spaces\\"",
    "  ],",
    "  \\"ruleDescription\\": \\"Trailing spaces\\",",
    "  \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md009.md\\",",
    "  \\"errorDetail\\": \\"Expected: 0 or 2; Actual: 1\\",",
    "  \\"errorContext\\": null,",
    "  \\"errorRange\\": [",
    "   10,",
    "   1",
    "  ],",
    "  \\"fixInfo\\": {",
    "   \\"editColumn\\": 10,",
    "   \\"deleteCount\\": 1",
    "  },",
    "  \\"severity\\": \\"error\\"",
    " },",
    " {",
    "  \\"fileName\\": \\"viewme.md\\",",
    "  \\"lineNumber\\": 5,",
    "  \\"ruleNames\\": [",
    "   \\"MD012\\",",
    "   \\"no-multiple-blanks\\"",
    "  ],",
    "  \\"ruleDescription\\": \\"Multiple consecutive blank lines\\",",
    "  \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md012.md\\",",
    "  \\"errorDetail\\": \\"Expected: 1; Actual: 2\\",",
    "  \\"errorContext\\": null,",
    "  \\"errorRange\\": null,",
    "  \\"fixInfo\\": {",
    "   \\"deleteCount\\": -1",
    "  },",
    "  \\"severity\\": \\"error\\"",
    " },",
    " {",
    "  \\"fileName\\": \\"viewme.md\\",",
    "  \\"lineNumber\\": 6,",
    "  \\"ruleNames\\": [",
    "   \\"MD025\\",",
    "   \\"single-title\\",",
    "   \\"single-h1\\"",
    "  ],",
    "  \\"ruleDescription\\": \\"Multiple top-level headings in the same document\\",",
    "  \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md025.md\\",",
    "  \\"errorDetail\\": null,",
    "  \\"errorContext\\": \\"Description\\",",
    "  \\"errorRange\\": null,",
    "  \\"fixInfo\\": null,",
    "  \\"severity\\": \\"error\\"",
    " },",
    " {",
    "  \\"fileName\\": \\"viewme.md\\",",
    "  \\"lineNumber\\": 12,",
    "  \\"ruleNames\\": [",
    "   \\"MD019\\",",
    "   \\"no-multiple-space-atx\\"",
    "  ],",
    "  \\"ruleDescription\\": \\"Multiple spaces after hash on atx style heading\\",",
    "  \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md019.md\\",",
    "  \\"errorDetail\\": null,",
    "  \\"errorContext\\": \\"##  Summary\\",",
    "  \\"errorRange\\": [",
    "   4,",
    "   1",
    "  ],",
    "  \\"fixInfo\\": {",
    "   \\"editColumn\\": 4,",
    "   \\"deleteCount\\": 1",
    "  },",
    "  \\"severity\\": \\"error\\"",
    " },",
    " {",
    "  \\"fileName\\": \\"viewme.md\\",",
    "  \\"lineNumber\\": 14,",
    "  \\"ruleNames\\": [",
    "   \\"MD047\\",",
    "   \\"single-trailing-newline\\"",
    "  ],",
    "  \\"ruleDescription\\": \\"Files should end with a single newline character\\",",
    "  \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md047.md\\",",
    "  \\"errorDetail\\": null,",
    "  \\"errorContext\\": null,",
    "  \\"errorRange\\": [",
    "   14,",
    "   1",
    "  ],",
    "  \\"fixInfo\\": {",
    "   \\"editColumn\\": 15,",
    "   \\"insertText\\": \\"\\\\n\\"",
    "  },",
    "  \\"severity\\": \\"error\\"",
    " }",
    "]"
  ],
  "formatterJunit": [
    "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>",
    "<testsuites tests=\\"5\\" failures=\\"5\\" errors=\\"0\\" skipped=\\"0\\">",
    "  <testsuite name=\\"markdownlint-cli2-formatter-junit\\" time=\\"0\\" tests=\\"5\\" failures=\\"5\\" errors=\\"0\\" skipped=\\"0\\">",
    "    <testcase classname=\\"viewme.md\\" name=\\"MD009/no-trailing-spaces\\" time=\\"0\\">",
    "      <failure message=\\"Trailing spaces\\"><![CDATA[Line 3, Column 10, Expected: 0 or 2; Actual: 1]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"viewme.md\\" name=\\"MD012/no-multiple-blanks\\" time=\\"0\\">",
    "      <failure message=\\"Multiple consecutive blank lines\\"><![CDATA[Line 5, Expected: 1; Actual: 2]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"viewme.md\\" name=\\"MD025/single-title/single-h1\\" time=\\"0\\">",
    "      <failure message=\\"Multiple top-level headings in the same document\\"><![CDATA[Line 6, Context: \\"Description\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"viewme.md\\" name=\\"MD019/no-multiple-space-atx\\" time=\\"0\\">",
    "      <failure message=\\"Multiple spaces after hash on atx style heading\\"><![CDATA[Line 12, Column 4, Context: \\"##  Summary\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"viewme.md\\" name=\\"MD047/single-trailing-newline\\" time=\\"0\\">",
    "      <failure message=\\"Files should end with a single newline character\\"><![CDATA[Line 14, Column 14]]></failure>",
    "    </testcase>",
    "  </testsuite>",
    "</testsuites>"
  ],
  "formatterSarif": [
    "{",
    "  \\"$schema\\": \\"https://json.schemastore.org/sarif-2.1.0.json\\",",
    "  \\"version\\": \\"2.1.0\\",",
    "  \\"runs\\": [",
    "    {",
    "      \\"tool\\": {",
    "        \\"driver\\": {",
    "          \\"name\\": \\"markdownlint-cli2\\",",
    "          \\"version\\": \\"0.0.4\\",",
    "          \\"informationUri\\": \\"https://github.com/DavidAnson/markdownlint-cli2\\",",
    "          \\"rules\\": [",
    "            {",
    "              \\"id\\": \\"MD009\\",",
    "              \\"name\\": \\"Md009NoTrailingSpaces\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Trailing spaces\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Trailing spaces\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md009.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD012\\",",
    "              \\"name\\": \\"Md012NoMultipleBlanks\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Multiple consecutive blank lines\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Multiple consecutive blank lines\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md012.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD025\\",",
    "              \\"name\\": \\"Md025SingleTitleSingleH1\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Multiple top-level headings in the same document\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Multiple top-level headings in the same document\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md025.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD019\\",",
    "              \\"name\\": \\"Md019NoMultipleSpaceAtx\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Multiple spaces after hash on atx style heading\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Multiple spaces after hash on atx style heading\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md019.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD047\\",",
    "              \\"name\\": \\"Md047SingleTrailingNewline\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Files should end with a single newline character\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Files should end with a single newline character\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md047.md\\"",
    "            }",
    "          ]",
    "        }",
    "      },",
    "      \\"results\\": [",
    "        {",
    "          \\"ruleId\\": \\"MD009\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Trailing spaces, Expected: 0 or 2; Actual: 1\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"viewme.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 3,",
    "                  \\"endLine\\": 3,",
    "                  \\"startColumn\\": 10,",
    "                  \\"endColumn\\": 11",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD012\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Multiple consecutive blank lines, Expected: 1; Actual: 2\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"viewme.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 5,",
    "                  \\"endLine\\": 5",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD025\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Multiple top-level headings in the same document, Context: \\\\\\"Description\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"viewme.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 6,",
    "                  \\"endLine\\": 6",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD019\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Multiple spaces after hash on atx style heading, Context: \\\\\\"##  Summary\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"viewme.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 12,",
    "                  \\"endLine\\": 12,",
    "                  \\"startColumn\\": 4,",
    "                  \\"endColumn\\": 5",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD047\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Files should end with a single newline character\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"viewme.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 14,",
    "                  \\"endLine\\": 14,",
    "                  \\"startColumn\\": 14,",
    "                  \\"endColumn\\": 15",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        }",
    "      ]",
    "    }",
    "  ]",
    "}"
  ]
}
`;

exports[`markdownlint-cli2-test-exec.mjs > overrides (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 4 files",
    "Summary: 14 issues in 4 files"
  ],
  "stderr": [
    "copyme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "copyme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "copyme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "copyme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir/copyme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir/copyme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir/copyme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir/copyme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > pyproject-toml (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 files",
    "Summary: 10 issues in 3 files"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > pyproject-toml-invalid (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;
